--- a/style.css
+++ b/style.css
@@ -449,6 +449,7 @@ header .navbar ul li a:hover{
         padding:1rem 4rem;
     }
 
+   
 }
 
 @media (max-width:991px){
@@ -462,9 +463,9 @@ header .navbar ul li a:hover{
         align-self: center;
         transform: translate(50%,50%);
     }
-
+    
    #menu{
-       display: inline-flex;
+       display: block;
    }
 
    header.toggle{
@@ -474,6 +475,18 @@ header .navbar ul li a:hover{
    body{
        padding:0;
    }
+   header .navbar{
+    display:grid;
+    grid-template-columns: auto;
+    background: var(--brightred);
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    top: 80px;
+    left: -100;
+    opacity: 0;
+    
+}
 
 }
 
@@ -483,7 +496,18 @@ header .navbar ul li a:hover{
         font-size: 50%;
     }
 
-    
+    header .navbar{
+        display:grid;
+        grid-template-columns: auto;
+        background: var(--brightred);
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: 80px;
+        left: -100;
+        opacity: 0;
+
+    }
   
  }
 
